🐛 fix not showing error modal when duplicate custom attribute

--- a/src/styles/product.scss
+++ b/src/styles/product.scss
@@ -3,6 +3,11 @@ $width: $height;
 
 .product-details {
   @extend .my-modal;
+  z-index: 1;
+  
+  .my-modal {
+    z-index: 1;
+  }
 
   &-header {
     padding: 2px 16px;
